tests/samples/passing/08_mutable.mlang
fn main() {
    let mut counter = 0;
    counter = $counter + 1$;

    let toggled = {
        let mut flag = true;
        flag = false;
        flag
    };

    let message = string_concat("count is ", i32_to_string(counter));
    println(message);
}
