tests/samples/failing/01.mlang
fn main() {
    let result = if true {
        123 // i32型
    } else {
        "a string" // string型
    };
}